Fixed my troop email alignment for the small screens

--- a/vtk/app/src/main/content/jcr_root/etc/designs/girlscouts-vtk/clientlibs/css/vtk-style.scss
+++ b/vtk/app/src/main/content/jcr_root/etc/designs/girlscouts-vtk/clientlibs/css/vtk-style.scss
@@ -1501,7 +1501,7 @@
     }
     .icon-mail {
       font-size: 31px;
-      margin-right: 30px;
+      margin-right: 10px;
       line-height:.5;
       }
       .accordion-inner {
@@ -1960,7 +1960,13 @@ input[type="file"] {
     > div:nth-of-type(2) {
       padding-left: 115px;
     }
-  } 
+  }
+ .vtk-body .accordion .accordion-inner ul.column:first-child {
+    margin-left:0;
+  }
+  .vtk-body .accordion dl dd a.email {
+    padding-left:0;
+  }
   .vtk-body #main #yearPlanMeetings ul {
     .meeting {
       > div {
